--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,31 @@
+html{
+    overflow: scroll;
+}
 body{
     margin: 0;
     text-align: center;
-}   
+}
+
+/* Wiki */
+section{
+    margin: 0 auto;
+    text-align: left;
+    width: 1024px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+section h1{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: 500;
+    font-size: 33px;
+    margin: 15px 0 0 0;
+    border-bottom: solid black 2px;
+    border-radius: 12px;
+    width: 208px;
+    background: linear-gradient(white, white, white, white, white, gray);
+}
+section h2, section h3{
+    margin: 20px 0 5px 0;
+}
+section p{
+    margin: 0;
+}
